--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 [build]
   functions = "functions"
-  publish = "public"  
-
-[build.environment] # Set the Node.js version if needed
+ node_bundler = "esbuild"
