--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb+srv://ankitmaharshi55:%40nk!t2910@cluster0.mongodb.net/crafo29?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ankitmaharshi55:SSn4R4S4fHPet7dN@crafto29.2ov0d.mongodb.net/?retryWrites=true&w=majority&appName=crafto29
+
+
+
 JWT_SECRET= jfnejnfenfnew
