--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "netlify-lambda": "^2.0.16",
+    "nodemon": "^3.1.4",
     "serverless-http": "^3.2.0"
   }
 }
