--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb+srv://ankitmaharshi55:SSn4R4S4fHPet7dN@crafto29.2ov0d.mongodb.net/?retryWrites=true&w=majority&appName=crafto29
+MONGO_URI="mongodb+srv://ankitmaharshi55:SSn4R4S4fHPet7dN@crafto29.2ov0d.mongodb.net/?retryWrites=true&w=majority&appName=crafto29"
 
 
 
-JWT_SECRET= jfnejnfenfnew
+JWT_SECRET= "jfnejnfenfnew"
